--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "pinia": "^2.0.36",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
+    "three": "^0.153.0",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue-threejs": "^0.2.0-alpha.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.8",
+    "@types/three": "^0.152.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
@@ -30,7 +33,7 @@
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
     "typescript": "~5.0.4",
-    "vite": "^4.3.5",
+    "vite": "^4.3.9",
     "vue-tsc": "^1.6.4"
   }
 }
