--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,4 +8,10 @@
       "path": "./tsconfig.app.json"
     }
   ],
+  "compilerOptions": {
+  },
+  "typeRoots": 
+  [
+    "node_modules/@types", "src/types"
+  ],
 }
